# Tg_tracking_habits

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
FastAPI/: main.py
FastAPI/app/: config.py  database.py
FastAPI/app/habits/: models.py  reposetory.py  routers.py
FastAPI/app/users/: auth.py  dao.py  models.py  reposetory.py  routers.py  schemas.py
Tg_bot/: buttons.py  config.py  main.py  notifications.py  states.py  utils.py
Tg_bot/handlers/: __init__.py  handlers.py
